# paperboy

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  MARKETING.md  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
config/: daily-brief.md.example  env.example  news_sources.yaml.example  research-interests.md.example  research-sources.json.example  topical-map.md.example
dashboard/: action-queue.html
deploy/: Caddyfile.paperboy  README.md  caddy-security-headers.caddy  opendkim.conf  paperboy.env.example  postfix-paperboy-aliases.txt
docs/: ARCHITECTURE.md  INSTALL.md  ROADMAP.md  action-queue.md  personalizing.md
docs/design/paperboy-firehose/: critique-summary.md  process-log.yaml  style-snapshot.json
docs/productization/: CADENCE-FEATURE.md  DESIGN_BRIEF.md  PRODUCT_STRATEGY.md  TECHNICAL_BLUEPRINT.md
examples/: action-queue.demo.jsonl  action-queue.demo.md  daily-brief.quiet.json  daily-brief.sample.json
openbrain/: __init__.py  db.py  discord_post.py  stream_common.py
openbrain/digest/: prompt_digest.py  research_digest.py
openbrain/ingest/: research_papers.py
openbrain/scanners/: news_opinion.py  papers_to_prompts.py  today_briefing.py  topical_questions.py
openbrain/score/: research_papers.py
paperboy/: __init__.py  backup.py  billing.py  config.py  confirmation_delivery.py  db.py  discord_post.py  firehose.py  firehose_delivery.py  health.py  lifecycle_delivery.py  logging_config.py  privacy.py  scheduler.py  stream_common.py  subscriptions.py
paperboy/api/: __init__.py  main.py
paperboy/daily_brief/: __init__.py  brief.py  cli.py  models.py
paperboy/digest/: action_queue.py  prompt_digest.py  research_digest.py
paperboy/email/: __init__.py  sender.py
paperboy/ingest/: research_papers.py
paperboy/scanners/: news_opinion.py  papers_to_prompts.py  today_briefing.py  topical_questions.py
paperboy/score/: research_papers.py
product/: README.md  app.js  check.mjs  index.html  robots.txt  sitemap.xml  styles.css
product/privacy/: index.html
product/terms/: index.html
scripts/: bootstrap.sh
systemd/: openbrain-news-opinion.service  openbrain-news-opinion.timer  openbrain-papers-to-prompts.service  openbrain-papers-to-prompts.timer  openbrain-prompt-digest.service  openbrain-research-digest.service  openbrain-research-ingest.service  openbrain-research-ingest.timer  openbrain-research-score.service  openbrain-today-briefing.service  openbrain-today-briefing.timer  openbrain-topical-questions.service  paperboy-backup.service  paperboy-backup.timer  paperboy-news-opinion.service  paperboy-news-opinion.timer  paperboy-papers-to-prompts.service  paperboy-prompt-digest.service  paperboy-prompt-digest.timer  paperboy-research-digest.service  paperboy-research-digest.timer  paperboy-research-ingest.service  paperboy-research-score.service  paperboy-research-score.timer  paperboy-today-briefing.service  paperboy-topical-questions.service  paperboy-topical-questions.timer
tests/: product_live_smoke.py  product_ui_smoke.py  test_api.py  test_backup.py  test_billing.py  test_config.py  test_daily_brief.py  test_email.py  test_firehose.py  test_health.py  test_lifecycle_delivery.py  test_operations.py  test_privacy.py  test_subscription_reliability.py  test_subscriptions.py
workspace/landing-pages/: paperboy.md
