[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openbrain"
version = "0.1.0"
description = "Daily Discord digest of news + research papers, scored by your local LLM against your own interests."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Connor Gallic", email = "connor@kaicalls.com" }]
keywords = ["llm", "ollama", "research", "discord", "rss", "arxiv", "personal-intelligence"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/cgallic/openbrain"
Repository = "https://github.com/cgallic/openbrain"
Issues = "https://github.com/cgallic/openbrain/issues"

[project.scripts]
openbrain-init-db = "openbrain.db:init_schema"
openbrain-news = "openbrain.scanners.news_opinion:main"
openbrain-papers-to-prompts = "openbrain.scanners.papers_to_prompts:main"
openbrain-topical-questions = "openbrain.scanners.topical_questions:main"
openbrain-today-briefing = "openbrain.scanners.today_briefing:main"
openbrain-ingest-papers = "openbrain.ingest.research_papers:main"
openbrain-score-papers = "openbrain.score.research_papers:main"
openbrain-prompt-digest = "openbrain.digest.prompt_digest:main"
openbrain-research-digest = "openbrain.digest.research_digest:main"

[tool.setuptools.packages.find]
include = ["openbrain*"]
