[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperboy"
version = "0.1.0"
description = "Daily Discord digest of news + research papers, scored by your local LLM against your own interests."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Connor Gallic", email = "connor@kaicalls.com" }]
keywords = ["llm", "ollama", "research", "discord", "rss", "arxiv", "personal-intelligence"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/cgallic/paperboy"
Repository = "https://github.com/cgallic/paperboy"
Issues = "https://github.com/cgallic/paperboy/issues"

[project.scripts]
paperboy-init-db = "paperboy.db:init_schema"
paperboy-news = "paperboy.scanners.news_opinion:main"
paperboy-papers-to-prompts = "paperboy.scanners.papers_to_prompts:main"
paperboy-topical-questions = "paperboy.scanners.topical_questions:main"
paperboy-today-briefing = "paperboy.scanners.today_briefing:main"
paperboy-ingest-papers = "paperboy.ingest.research_papers:main"
paperboy-score-papers = "paperboy.score.research_papers:main"
paperboy-prompt-digest = "paperboy.digest.prompt_digest:main"
paperboy-research-digest = "paperboy.digest.research_digest:main"

[tool.setuptools.packages.find]
include = ["paperboy*"]
