[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperboy"
version = "0.4.0"
description = "Personal relevance filter that turns public RSS and Atom feeds into a short, source-linked brief."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Connor Gallic", email = "connor@kaicalls.com" }]
keywords = ["llm", "ollama", "research", "discord", "rss", "arxiv", "personal-intelligence", "email", "daily-brief"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.14.2",
    "tzdata>=2025.2",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "stripe>=14.0,<15",
    "uvicorn[standard]>=0.29",
]
email = [
    "apscheduler>=3.10",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.9",
]
all = [
    "fastapi>=0.110",
    "stripe>=14.0,<15",
    "uvicorn[standard]>=0.29",
    "apscheduler>=3.10",
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.9",
]

[project.urls]
Homepage = "https://github.com/cgallic/paperboy"
Repository = "https://github.com/cgallic/paperboy"
Issues = "https://github.com/cgallic/paperboy/issues"

[project.scripts]
paperboy-init-db = "paperboy.db:init_schema"
paperboy-news = "paperboy.scanners.news_opinion:main"
paperboy-papers-to-prompts = "paperboy.scanners.papers_to_prompts:main"
paperboy-topical-questions = "paperboy.scanners.topical_questions:main"
paperboy-today-briefing = "paperboy.scanners.today_briefing:main"
paperboy-ingest-papers = "paperboy.ingest.research_papers:main"
paperboy-score-papers = "paperboy.score.research_papers:main"
paperboy-prompt-digest = "paperboy.digest.prompt_digest:main"
paperboy-research-digest = "paperboy.digest.research_digest:main"
paperboy-daily-brief-sample = "paperboy.daily_brief.cli:main"
paperboy-api = "paperboy.api.main:app"
paperboy-scheduler = "paperboy.scheduler:main"
paperboy-privacy = "paperboy.privacy:main"

[tool.setuptools.packages.find]
include = ["paperboy*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
